--- a/openApiDocs/beta/Security.yml
+++ b/openApiDocs/beta/Security.yml
@@ -33995,6 +33995,12 @@ components:
                 $ref: '#/components/schemas/microsoft.graph.drive'
               description: The collection of drives (document libraries) under this site.
               x-ms-navigationProperty: true
+            extensions:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.extension'
+              description: The collection of open extensions defined for this site. Nullable.
+              x-ms-navigationProperty: true
             externalColumns:
               type: array
               items:
@@ -36123,7 +36129,7 @@ components:
               description: Last update time of the task. Read-only.
               format: date-time
             responseAction:
-              $ref: '#/components/schemas/microsoft.graph.security.responseAction'
+              $ref: '#/components/schemas/microsoft.graph.security.incidentTaskResponseAction'
             source:
               $ref: '#/components/schemas/microsoft.graph.security.incidentTaskSource'
             status:
@@ -41327,6 +41333,13 @@ components:
               x-ms-navigationProperty: true
           additionalProperties:
             type: object
+    microsoft.graph.extension:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: extension
+          type: object
+          additionalProperties:
+            type: object
     microsoft.graph.informationProtection:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -42115,7 +42128,7 @@ components:
               description: A short summary from the body of the latest post in this conversation.
             topic:
               type: string
-              description: 'The topic of the conversation. This property can be set when the conversation is created, but it cannot be updated.'
+              description: 'The topic of the conversation. This property can be set when the conversation is created, but it can''t be updated.'
             uniqueSenders:
               type: array
               items:
@@ -42153,13 +42166,6 @@ components:
             uri:
               type: string
               description: URL of the published resource. Not nullable. Read-only.
-          additionalProperties:
-            type: object
-    microsoft.graph.extension:
-      allOf:
-        - $ref: '#/components/schemas/microsoft.graph.entity'
-        - title: extension
-          type: object
           additionalProperties:
             type: object
     microsoft.graph.groupLifecyclePolicy:
@@ -43758,6 +43764,15 @@ components:
         - enableUser
         - unknownFutureValue
       type: string
+    microsoft.graph.security.incidentTaskResponseAction:
+      title: incidentTaskResponseAction
+      type: object
+      properties:
+        identifierValue:
+          type: string
+          description: Required. The identifier value for the response action. This value is specific to the type of action being performed.
+      additionalProperties:
+        type: object
     microsoft.graph.security.incidentTaskSource:
       title: incidentTaskSource
       enum:
@@ -45252,6 +45267,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.externalAuthenticationMethod'
+              description: Represents the external methods registered to a user for authentication.
               x-ms-navigationProperty: true
             fido2Methods:
               type: array
@@ -47164,7 +47180,7 @@ components:
               nullable: true
             externalId:
               type: string
-              description: The external ID. A custom ID. Optional.
+              description: The external ID that is a custom identifier. Optional.
               nullable: true
             isBroadcast:
               type: boolean
@@ -53615,8 +53631,10 @@ components:
           properties:
             configurationId:
               type: string
+              description: A unique identifier used to manage the external auth method within Microsoft Entra ID.
             displayName:
               type: string
+              description: Custom name given to the registered external authentication method.
           additionalProperties:
             type: object
     microsoft.graph.fido2AuthenticationMethod:
@@ -58156,7 +58174,7 @@ components:
               nullable: true
             issuingAuthority:
               type: string
-              description: Authority which granted the patent.
+              description: Authority that granted the patent.
               nullable: true
             number:
               type: string
@@ -70980,7 +70998,7 @@ components:
       properties:
         isApprovalRequired:
           type: boolean
-          description: 'Specifies whether approval is required to complete the plannerTask. When this property is set to true, the task can only be marked complete if an approval is created for the task and approved.'
+          description: 'Specifies whether approval is required to complete the plannerTask. If set to true, the task can only be marked as complete if an approval is created for the task and approved.'
           nullable: true
       additionalProperties:
         type: object
